# xsd2xml

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post_create.sh
tests/: __main__test.py  db_test.py  field_generation_test.py  generate_test.py  readme_test.py  xsd_handling_test.py  xsd_test.py
tests/db/: db_test.py
tests/test_data/: example_schema.xsd  simple_schema_1.xsd
tests/xml/: tag_actions_test.py
xsd2xml/: __main__.py  db.py  field_generation.py  generate.py  xml_model.sql  xml_utils.py  xsd.py  xsd_handling.py
xsd2xml/db/: db.py
xsd2xml/xml/: tag_actions.py
